section bisnis row warning

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,9 @@ section.banner-section {
     color: #306D20;
 }
 
+.bg-green {
+    background: #398228;
+}
 .bg-soft-green {
     background: #F4F8F3;
 }
